# PaperNest

./: .gitignore  API_document.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tailwind.css
.devcontainer/: .dockerignore  devcontainer.json  docker-compose.prod.yml  (+1 more)
backend/: config.py  main.py  pyproject.toml  requirements.txt  schema.py
backend/api/: get_pdf.py  get_pdf_llm.py  main.py
backend/api/auth/: change_password.py  change_user_name.py  delete_user.py  get_user_info.py  login.py  refresh.py  register.py  reset_password.py
backend/api/auth/reset_password/: reset_password.py  verify_user.py
backend/api/db_register/: conference_core_rank.csv  db_register.py  get_paper_title.py  get_pdf.py  get_pdf_title.py  journal_core_rank.csv  metadata_fetcher.py  upload_pdf.py  view_pdf.py
backend/api/delete_data/: delete_data.py
backend/api/delete_research_theme/: delete_research_theme.py
backend/api/get_all_papers/: get_all_papers.py
backend/api/query/: pdf_query.py
backend/api/update_data/: update_data.py
backend/api/update_research_theme/: update_research_theme.py
backend/api/vector_search/: vector_search.py
backend/config/: config.py
backend/database/: database.py
backend/db_register/: conference_core_rank.csv  db_register.py  get_pdf.py  journal_core_rank.csv  models.py
backend/db_register/database/: database.py
backend/models/: models.py
backend/rag/: get_pdf.py
backend/schema/: schema.py
backend/utils/: create_table.py  security.py  tranalate.py  vector_store.py
(+65 files in other folders)
