[project]
name = "untkt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-core>=0.3.56",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.2.0",
    "pandas>=2.2.3",
    "pdfminer-six>=20250506",
    "pydantic>=2.11.3",
    "pymupdf>=1.25.5",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=4.1.0",
    "sentencepiece>=0.2.0",
    "sqlalchemy>=2.0.40",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
]
